# Life_Admin

./: .env.example  CLAUDE.md  README.md  agent.py  api_server.py  app.js  config.py  email_scan_ui.js  email_watch.py  index.html  llm_service.py  main.py  prompts.py  pyproject.toml  requirements.txt  schemas.py  styles.css  tools.py
life_admin/: __init__.py
life_admin/agent/: __init__.py
life_admin/agent/tools/: __init__.py  email_crawl.py
life_admin/integrations/: __init__.py
life_admin/integrations/email/: __init__.py  factory.py  google.py  http.py  outlook.py  parsing.py  types.py
life_admin/scanner/: __init__.py  email_agent_runner.py  email_scanner.py
tests/: test_agent.py  test_email_agent_runner.py  test_email_crawl_tools.py  test_email_http.py  test_email_scanner.py
